--- a/style.css
+++ b/style.css
@@ -28,9 +28,13 @@ body {
   font-family: 'Work Sans', sans-serif;
   background: #000;
 }
+input,
+textarea {
+  font-family: 'Work Sans', sans-serif;
+}
 img {
   width: 100%;
-  display: block;
+  display: inline-block;
 }
 .section {
   padding: 5rem 5%;
@@ -70,7 +74,22 @@ button {
   border: none;
   cursor: pointer;
 }
-/* Header */
+hr {
+  border-top: 10px dashed var(--color-light);
+  border-bottom: none;
+  width: 10rem;
+  margin: 0 auto;
+}
+.section-title {
+  color: var(--primary-color2);
+  text-transform: uppercase;
+  letter-spacing: 3px;
+  text-align: center;
+  margin-bottom: 2rem;
+}
+/*==================
+ HEADER SECTION
+==================== */
 header {
   height: 100vh;
   width: 100vw;
@@ -278,7 +297,6 @@ SKILLS SECTION CSS
 
 .skills h3 {
   text-align: center;
-  color: var(--primary-color2);
 }
 .single-skill {
   width: 90%;
@@ -308,16 +326,16 @@ SKILLS SECTION CSS
   /* animation: html 0.5s forwards; */
 }
 .html div {
-  animation: html 1s forwards infinite;
+  animation: html 1s forwards;
 }
 .css div {
-  animation: css 1s forwards infinite;
+  animation: css 1s forwards;
 }
 .javascript div {
-  animation: javascript 1s forwards infinite;
+  animation: javascript 1s forwards;
 }
 .react div {
-  animation: react 1s forwards infinite;
+  animation: react 1s forwards;
 }
 @keyframes html {
   100% {
@@ -346,4 +364,28 @@ SKILLS SECTION CSS
   color: #fff;
 
   text-align: end;
+}
+
+/* END OF SKILL SECTION CSS */
+
+/* ====================
+GALLERY SECTION CSS
+======================= */
+
+.images-container {
+  display: grid;
+  gap: 1rem;
+  grid-template-columns: repeat(auto-fit, minmax(330px, 1fr));
+  grid-auto-rows: 500px;
+  grid-auto-flow: dense;
+}
+.images-container img {
+  height: 100%;
+  border-radius: 10px;
+  border: 2px solid #fff;
+  object-fit: cover;
+  object-position: 25% 25%;
+}
+.long {
+  grid-row: span 2;
 }
