--- a/style.css
+++ b/style.css
@@ -88,6 +88,19 @@ hr {
   text-align: center;
   margin-bottom: 2rem;
 }
+.fab {
+  color: orangered;
+  margin-right: 1rem;
+}
+.fab:hover {
+  box-shadow: 1px 5px 5px;
+}
+.fa-facebook {
+  color: cornflowerblue;
+}
+.fa-patreon {
+  color: var(--color-darK);
+}
 /*==================
  HEADER SECTION
 ==================== */
@@ -236,14 +249,12 @@ HERO CSS
   gap: 1rem;
   padding-top: 5rem;
 }
-.hero-icons a i {
+.hero-icons i {
   font-size: 1.5rem;
   /* border: 2px solid yellow; */
   padding: 5px;
-  color: var(--primary-color1);
-}
-.hero-icons a i:hover {
-  color: var(--primary-color2);
+  background: var(--color-light);
+  border-radius: 5px;
 }
 
 /* hero-right */
@@ -435,16 +446,7 @@ GALLERY SECTION CSS
   color: black;
   margin-bottom: 1rem;
 }
-.fab {
-  color: orangered;
-  margin-right: 1rem;
-}
-.fa-facebook {
-  color: cornflowerblue;
-}
-.fa-patreon {
-  color: var(--color-darK);
-}
+
 form {
   text-align: center;
   padding: 0 1rem;
@@ -452,25 +454,35 @@ form {
 form .input {
   display: block;
   margin: 0 auto 1rem;
-  padding-left: 1rem;
-  padding-right: 1rem;
   border-radius: 0.5rem;
   width: 90%;
   height: 2rem;
+}
+::placeholder {
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  padding: 1rem;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+form .textarea {
+  height: 7rem;
 }
 .form-btn {
   cursor: pointer;
   text-transform: uppercase;
   width: 10rem;
-  background: cyan;
-  color: var(--color-darK);
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  background: linear-gradient(45deg, #8614ce, #ff0057);
+  color: var(--color-light);
+  border: 2px solid #fff;
   border-radius: 0.5rem;
-  letter-spacing: 1px;
+  letter-spacing: 2px;
   height: 2rem;
-  transition: 0.3s;
+  transition: 0.5s;
 }
 .form-btn:hover {
-  background: var(--primary-color3);
+  background: linear-gradient(-45deg, #8614ce, #ff0057);
   color: var(--color-light);
 }
 @media screen and (max-width: 650px) {
